--- a/index.html
+++ b/index.html
@@ -9,10 +9,22 @@
 
   <!-- tailwind CSS -->
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+
+  <script defer src="https://cdn.rawgit.com/lagden/vanilla-masker/lagden/build/vanilla-masker.min.js"></script>
+  <script defer src="./src/js/index.js" type="module"></script>
   <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.8.2/angular.min.js"> -->
   <title>Contrato Social</title>
+
+  <style>
+    input:-webkit-autofill,
+    input:-webkit-autofill:hover,
+    input:-webkit-autofill:focus,
+    input:-webkit-autofill:active {
+      transition: background-color 5000s ease-in-out 0s;
+    }
+  </style>
 </head>
-<body class="min-h-screen flex items-center justify-center bg-gray-50 py-12 px-4 sm:px-6 lg:px-8">
+<body class="min-h-screen flex items-center justify-center bg-gray-800 py-12 px-4 sm:px-6 lg:px-8">
   <!-- --------------- -->
   <!--     WRAPPER     -->
   <!-- --------------- -->
@@ -23,7 +35,7 @@
     <header>
       <img class="mx-auto h-12 w-auto" src="https://tailwindui.com/img/logos/workflow-mark-indigo-600.svg"
         alt="Workflow" />
-      <h2 class="mt-6 text-center text-3xl font-black text-gray-900">Faça já seu contrato social</h2>
+      <h2 class="mt-6 text-center text-3xl font-black text-indigo-50">Faça já seu contrato social</h2>
     </header>
 
     <!-- --------------- -->
@@ -36,7 +48,7 @@
           <label htmlFor="name" class="sr-only">Nome</label>
           <input 
             id="name" name="name" type="text" autoComplete="name" required
-            class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
+            class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-700 bg-gray-900 placeholder-gray-500 text-gray-300 rounded-t-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
             placeholder="Seu nome"
           />
         </div>
@@ -46,7 +58,7 @@
             <label htmlFor="work" class="sr-only">Profissão</label>
             <input 
             id="work" name="work" type="text" autoComplete="work" required
-            class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
+            class="appearance-none rounded-none relative block w-full px-3 py-2 border border-r-0 border-gray-700 bg-gray-900 placeholder-gray-500 text-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
             placeholder="Sua profissão"
             />
           </div>
@@ -55,7 +67,7 @@
             <label htmlFor="country" class="sr-only">Nacionalidade</label>
             <input 
             id="country" name="country" type="text" autoComplete="country" required
-            class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
+            class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-700 bg-gray-900 placeholder-gray-500 text-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
             placeholder="Nacionalidade"
             />
           </div>
@@ -65,7 +77,7 @@
           <label htmlFor="relation" class="sr-only">Estado civil</label>
           <input
             id="relation" list="relationList" name="relation" type="text" required
-            class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
+            class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-700 bg-gray-900 placeholder-gray-500 text-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
             placeholder="ex: solteiro(a), casado(a)"
           />
 
@@ -82,7 +94,7 @@
           <label htmlFor="socialSecurity" class="sr-only">CPF</label>
           <input
             id="socialSecurity" name="socialSecurity" type="text" maxlength="14" required
-            class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-b-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
+            class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-700 bg-gray-900 placeholder-gray-500 text-gray-300 rounded-b-md  focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
             placeholder="000.000.000-00"
           />
         </div>
@@ -92,7 +104,7 @@
       <!-- Submit form -->
       <div>
         <button type="submit"
-          class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+          class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-md font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
           <span class="absolute left-0 inset-y-0 flex items-center pl-3">
           </span>
           Gerar Contrato
@@ -100,8 +112,5 @@
       </div>
     </form>
   </main>
-
-  <script defer src="https://cdn.rawgit.com/lagden/vanilla-masker/lagden/build/vanilla-masker.min.js"></script>
-  <script defer src="./src/js/index.js"></script>
 </body>
 </html>
