--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <!-- tailwind CSS -->
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 
+  <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.js" defer></script>
   <script defer src="https://cdn.rawgit.com/lagden/vanilla-masker/lagden/build/vanilla-masker.min.js"></script>
   <script defer src="./src/js/index.js" type="module"></script>
   <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.8.2/angular.min.js"> -->
@@ -24,93 +25,110 @@
     }
   </style>
 </head>
-<body class="min-h-screen flex items-center justify-center bg-gray-800 py-12 px-4 sm:px-6 lg:px-8">
+<body x-data="app()" x-cloak class="w-screen h-screen flex flex-col  items-center justify-between bg-gray-800">
   <!-- --------------- -->
   <!--     WRAPPER     -->
   <!-- --------------- -->
-  <main class="max-w-md w-full space-y-8">
-    <!-- --------------- -->
-    <!--      TITLE      -->
-    <!-- --------------- -->
-    <header>
-      <img class="mx-auto h-12 w-auto" src="https://tailwindui.com/img/logos/workflow-mark-indigo-600.svg"
-        alt="Workflow" />
-      <h2 class="mt-6 text-center text-3xl font-black text-indigo-50">Faça já seu contrato social</h2>
-    </header>
-
-    <!-- --------------- -->
-    <!--      FORM       -->
-    <!-- --------------- -->
-    <form class="mt-8 space-y-6" action="#" method="POST">
-      <input type="hidden" name="remember" defaultValue="true" />
-      <div class="rounded-md shadow-sm -space-y-px">
-        <div>
-          <label htmlFor="name" class="sr-only">Nome</label>
-          <input 
-            id="name" name="name" type="text" autoComplete="name" required
-            class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-700 bg-gray-900 placeholder-gray-500 text-gray-300 rounded-t-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
-            placeholder="Seu nome"
-          />
-        </div>
-
-        <section class="flex justify-between">
-          <div class="w-full">
-            <label htmlFor="work" class="sr-only">Profissão</label>
-            <input 
-            id="work" name="work" type="text" autoComplete="work" required
-            class="appearance-none rounded-none relative block w-full px-3 py-2 border border-r-0 border-gray-700 bg-gray-900 placeholder-gray-500 text-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
-            placeholder="Sua profissão"
+  <main class="w-full h-full flex items-center justify-center">
+    <section>
+      <!-- --------------- -->
+      <!--      TITLE      -->
+      <!-- --------------- -->
+      <header>
+        <img class="mx-auto h-12 w-auto" src="https://tailwindui.com/img/logos/workflow-mark-indigo-600.svg"
+          alt="Workflow" />
+        <h2 class="mt-6 text-center text-3xl font-black text-indigo-50">Faça já seu contrato social</h2>
+      </header>
+      <!-- --------------- -->
+      <!--      FORM       -->
+      <!-- --------------- -->
+      <form class="mt-8 space-y-6" action="#" method="POST">
+        <input type="hidden" name="remember" defaultValue="true" />
+        <div class="rounded-md shadow-sm -space-y-px">
+          <div>
+            <label htmlFor="name" class="sr-only">Nome</label>
+            <input
+              id="name" name="name" type="text" autoComplete="name" required
+              class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-700 bg-gray-900 placeholder-gray-500 text-gray-300 rounded-t-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
+              placeholder="Seu nome"
             />
           </div>
-
-          <div class="w-full">
-            <label htmlFor="country" class="sr-only">Nacionalidade</label>
-            <input 
-            id="country" name="country" type="text" autoComplete="country" required
-            class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-700 bg-gray-900 placeholder-gray-500 text-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
-            placeholder="Nacionalidade"
+          <section class="flex justify-between">
+            <div class="w-full">
+              <label htmlFor="work" class="sr-only">Profissão</label>
+              <input
+              id="work" name="work" type="text" autoComplete="work" required
+              class="appearance-none rounded-none relative block w-full px-3 py-2 border border-r-0 border-gray-700 bg-gray-900 placeholder-gray-500 text-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
+              placeholder="Sua profissão"
+              />
+            </div>
+            <div class="w-full">
+              <label htmlFor="country" class="sr-only">Nacionalidade</label>
+              <input
+              id="country" name="country" type="text" autoComplete="country" required
+              class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-700 bg-gray-900 placeholder-gray-500 text-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
+              placeholder="Nacionalidade"
+              />
+            </div>
+          </section>
+          <div>
+            <label htmlFor="relation" class="sr-only">Estado civil</label>
+            <input
+              id="relation" list="relationList" name="relation" type="text" required
+              class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-700 bg-gray-900 placeholder-gray-500 text-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
+              placeholder="ex: solteiro(a), casado(a)"
+            />
+            <datalist id="relationList">
+              <option>Solteiro(a)</option>
+              <option>Casado(a)</option>
+              <option>Separado(a)</option>
+              <option>Divorciado(a)</option>
+              <option>Viúvo(a)</option>
+            </datalist>
+          </div>
+          <div>
+            <label htmlFor="socialSecurity" class="sr-only">CPF</label>
+            <input
+              id="socialSecurity" name="socialSecurity" type="text" maxlength="14" required
+              class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-700 bg-gray-900 placeholder-gray-500 text-gray-300 rounded-b-md  focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
+              placeholder="000.000.000-00"
             />
           </div>
-        </section>
-
-        <div>
-          <label htmlFor="relation" class="sr-only">Estado civil</label>
-          <input
-            id="relation" list="relationList" name="relation" type="text" required
-            class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-700 bg-gray-900 placeholder-gray-500 text-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
-            placeholder="ex: solteiro(a), casado(a)"
-          />
-
-          <datalist id="relationList">
-            <option>Solteiro(a)</option>
-            <option>Casado(a)</option>
-            <option>Separado(a)</option>
-            <option>Divorciado(a)</option>
-            <option>Viúvo(a)</option>
-          </datalist>
         </div>
-
+        <!-- Submit form -->
         <div>
-          <label htmlFor="socialSecurity" class="sr-only">CPF</label>
-          <input
-            id="socialSecurity" name="socialSecurity" type="text" maxlength="14" required
-            class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-700 bg-gray-900 placeholder-gray-500 text-gray-300 rounded-b-md  focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
-            placeholder="000.000.000-00"
-          />
+          <button type="submit"
+            class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-md font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-transparent focus:ring-indigo-900">
+            <span class="absolute left-0 inset-y-0 flex items-center pl-3">
+            </span>
+            Gerar Contrato
+          </button>
         </div>
-      </div>
+      </form>
+    </section>
 
-
-      <!-- Submit form -->
-      <div>
-        <button type="submit"
-          class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-md font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-          <span class="absolute left-0 inset-y-0 flex items-center pl-3">
-          </span>
-          Gerar Contrato
-        </button>
-      </div>
-    </form>
+    <!-- --------------- -->
+    <!--     FOOTER      -->
+    <!-- --------------- -->
   </main>
+
+  <div class="w-full py-5 bg-gray-900 shadow-md" x-show="step != 'complete'">
+    <div class="max-w-3xl mx-auto px-4">
+      <div class="flex justify-between">
+        <div class="w-1/2">
+          <button x-show="step > 1" @click="step--"
+            class="w-32 focus:outline-none focus:ring-2 focus:ring-indigo-500 outline-none py-2 px-4 text-sm rounded-lg shadow-sm text-center text-gray-300 bg-gray-700 hover:bg-gray-600 duration-200 font-medium">Previous</button>
+        </div>
+  
+        <div class="w-1/2 text-right">
+          <button x-show="step < 3" @click="step++"
+            class="w-32 focus:outline-none focus:ring-offset-2 focus:ring-2 focus:ring-indigo-900 outline-none py-2 px-4 text-sm rounded-lg shadow-sm text-center text-gray-100 bg-indigo-600 hover:bg-indigo-700 duration-200 font-medium">Next</button>
+  
+          <button @click="step = 'complete'" x-show="step === 3"
+            class="w-32 focus:outline-none focus:ring-offset-2 focus:ring-2 focus:ring-indigo-900 outline-none py-2 px-4 text-sm rounded-lg shadow-sm text-center text-gray-100 bg-indigo-600 hover:bg-indigo-700 duration-200 font-medium">Complete</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
