--- a/index.html
+++ b/index.html
@@ -53,12 +53,13 @@
               placeholder="Seu nome"
             />
           </div>
-          <section class="flex justify-between">
+
+          <section class="flex flex-col justify-between md:flex-row">
             <div class="w-full">
               <label htmlFor="work" class="sr-only">Profissão</label>
               <input
               id="work" name="work" type="text" autoComplete="work" required
-              class="appearance-none rounded-none relative block w-full px-3 py-2 border border-r-0 border-gray-700 bg-gray-900 placeholder-gray-500 text-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
+              class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-700 bg-gray-900 placeholder-gray-500 text-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
               placeholder="Sua profissão"
               />
             </div>
@@ -112,23 +113,25 @@
     <!-- --------------- -->
   </main>
 
-  <div class="w-full py-5 bg-gray-900 shadow-md" x-show="step != 'complete'">
-    <div class="max-w-3xl mx-auto px-4">
-      <div class="flex justify-between">
-        <div class="w-1/2">
-          <button x-show="step > 1" @click="step--"
-            class="w-32 focus:outline-none focus:ring-2 focus:ring-indigo-500 outline-none py-2 px-4 text-sm rounded-lg shadow-sm text-center text-gray-300 bg-gray-700 hover:bg-gray-600 duration-200 font-medium">Previous</button>
-        </div>
-  
-        <div class="w-1/2 text-right">
-          <button x-show="step < 3" @click="step++"
-            class="w-32 focus:outline-none focus:ring-offset-2 focus:ring-2 focus:ring-indigo-900 outline-none py-2 px-4 text-sm rounded-lg shadow-sm text-center text-gray-100 bg-indigo-600 hover:bg-indigo-700 duration-200 font-medium">Next</button>
-  
-          <button @click="step = 'complete'" x-show="step === 3"
-            class="w-32 focus:outline-none focus:ring-offset-2 focus:ring-2 focus:ring-indigo-900 outline-none py-2 px-4 text-sm rounded-lg shadow-sm text-center text-gray-100 bg-indigo-600 hover:bg-indigo-700 duration-200 font-medium">Complete</button>
-        </div>
+  <div class="w-full py-5 bg-gray-900 shadow-md px-4 flex flex-row justify-evenly align-center" x-show="step != 'complete'">
+      <button x-show="step > 1" @click="step--"
+        class="col-span-2 w-32 focus:outline-none focus:ring-2 focus:ring-indigo-500 outline-none py-2 px-4 text-sm rounded-lg shadow-sm text-center text-gray-300 bg-gray-700 hover:bg-gray-600 duration-200 font-medium">Previous</button>
+
+      <div>
+        <button x-show="step < 3" @click="step++"
+        class="w-32 focus:outline-none focus:ring-offset-2 focus:ring-2 focus:ring-indigo-900 outline-none py-2 px-4 text-sm rounded-lg shadow-sm text-center text-gray-100 bg-indigo-600 hover:bg-indigo-700 duration-200 font-medium">Next</button>
+        
+        <button @click="step = 'complete'" x-show="step === 3"
+        class="w-32 focus:outline-none focus:ring-offset-2 focus:ring-2 focus:ring-indigo-900 outline-none py-2 px-4 text-sm rounded-lg shadow-sm text-center text-gray-100 bg-indigo-600 hover:bg-indigo-700 duration-200 font-medium">Complete</button>
       </div>
-    </div>
   </div>
+
+  <script defer>
+    function app() {
+        return {
+          step: 1,
+        }
+      }
+  </script>
 </body>
 </html>
